--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -8,7 +8,9 @@ body {
   color:#727272;
   font-weight:400;
 }
-
+p {
+  text-align: justify;
+}
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
